Sorting on overlap, fixing edu_med

--- a/index.css
+++ b/index.css
@@ -88,6 +88,7 @@ button {
 .smallLabels {
   font-size: 12px;
   font-weight: 400;
+  cursor: pointer;
 }
 .memberDots {
   fill: #377668;
